@@ -21,19 +21,30 @@ public class CommandRegistry {
         //Команды управления пользователями:
 
         parser.registerCommand("user-list", "List all users", (s, sys) -> {
-            System.out.println("\n=== USER LIST ===");
+            ConsoleUtils.printHeader("USER LIST");
 
             List<User> users = sys.getUserManager().findAll();
 
-            System.out.print("Filter (Enter for all): ");
-            String filter = s.nextLine().trim();
+            boolean useFilter = ConsoleUtils.promptYesNo(s, "Apply filter?");
 
-            if (!filter.isEmpty()) {
-                users = users.stream().filter(u -> u.username().contains(filter) || u.email().contains(filter)).toList();
+            if (useFilter) {
+                List<String> filterOptions = List.of("By username", "By email");
+                String filterType = ConsoleUtils.promptChoice(s, "Select filter type:", filterOptions);
+                String filterValue = ConsoleUtils.promptString(s, "Enter search term: ", true);
+
+                if (filterType.equals("By username")) {
+                    users = users.stream()
+                            .filter(u -> u.username().toLowerCase().contains(filterValue.toLowerCase()))
+                            .collect(java.util.stream.Collectors.toList());
+                } else {
+                    users = users.stream()
+                            .filter(u -> u.email().toLowerCase().contains(filterValue.toLowerCase()))
+                            .collect(java.util.stream.Collectors.toList());
+                }
             }
 
             if (users.isEmpty()) {
-                System.out.println("No users found.");
+                ConsoleUtils.printInfo("No users found.");
                 return;
             }
 
@@ -50,62 +61,52 @@ public class CommandRegistry {
             }
 
             System.out.println("-".repeat(70));
-            System.out.println("| Total: " + users.size() + " users" + " ".repeat(50 - String.valueOf(users.size()).length() - 14) + "|");
-            System.out.println("-".repeat(70));
+            ConsoleUtils.printSuccess("Total: " + users.size() + " users");
         });
 
 
         parser.registerCommand("user-create", "Create new user", (s, sys) -> {
-            System.out.println("\n=== CREATE NEW USER ===");
+            ConsoleUtils.printHeader("CREATE NEW USER");
 
             try {
-                System.out.println("Username: ");
-                String username = s.nextLine().trim();
-
-                System.out.print("Full Name: ");
-                String fullName = s.nextLine().trim();
-
-                System.out.print("Email: ");
-                String email = s.nextLine().trim();
-
-                ValidationUtils.requireNonEmpty(username, "Username");
-                ValidationUtils.requireNonEmpty(fullName, "FullName");
-                ValidationUtils.requireNonEmpty(email, "Email");
+                String username = ConsoleUtils.promptString(s, "Username: ", true);
 
                 if (!ValidationUtils.isValidUsername(username)) {
-                    System.out.println("Error: Username must be 3-20 characters...");
+                    ConsoleUtils.printError("Username must be 3-20 characters and contain only letters, numbers, underscores");
                     return;
                 }
+
+                String fullName = ConsoleUtils.promptString(s, "Full Name: ", true);
+                String email = ConsoleUtils.promptString(s, "Email: ", true);
+
                 if (!ValidationUtils.isValidEmail(email)) {
-                    System.out.println("Error: Invalid email format");
+                    ConsoleUtils.printError("Invalid email format");
                     return;
                 }
 
                 User user = User.create(username, fullName, email);
-
                 sys.getUserManager().add(user);
 
                 sys.getAuditLog().log("CREATE_USER", sys.getCurrentUser(), username,
                         "Full name: " + fullName + ", Email: " + email);
 
-                System.out.println("\nUser created successfully!");
+                ConsoleUtils.printSuccess("User created successfully!");
                 System.out.println("  Username: " + user.username());
                 System.out.println("  Full Name: " + user.fullName());
                 System.out.println("  Email: " + user.email());
 
             } catch (IllegalArgumentException e) {
-                System.out.println("\nError: " + e.getMessage());
+                ConsoleUtils.printError(e.getMessage());
             } catch (Exception e) {
-                System.out.println("\nError creating user: " + e.getMessage());
+                ConsoleUtils.printError("Error creating user: " + e.getMessage());
             }
         });
 
 
         parser.registerCommand("user-view", "View user", (s, sys) -> {
-            System.out.println("\n=== VIEW USER ===");
+            ConsoleUtils.printHeader("VIEW USER");
 
-            System.out.println("Username: ");
-            String username = s.nextLine().trim();
+            String username = ConsoleUtils.promptString(s, "Username: ", true);
 
             UserManager um = sys.getUserManager();
             AssignmentManager am = sys.getAssignmentManager();
@@ -151,15 +152,14 @@ public class CommandRegistry {
                 }
 
             } else {
-                System.out.println("User '" + username + "' not found");
+                ConsoleUtils.printError("User '" + username + "' not found");
             }
         });
 
         parser.registerCommand("user-update", "Update user information", (s, sys) -> {
-            System.out.println("\n=== USER UPDATE ===");
+            ConsoleUtils.printHeader("USER UPDATE");
 
-            System.out.println("Username: ");
-            String username = s.nextLine().trim();
+            String username = ConsoleUtils.promptString(s, "Username: ", true);
 
             UserManager um = sys.getUserManager();
             Optional<User> optionalUser = um.findByUsername(username);
@@ -167,48 +167,45 @@ public class CommandRegistry {
             if (optionalUser.isPresent()){
                 User user = optionalUser.get();
 
-                System.out.println("\nCurrent information:");
+                ConsoleUtils.printInfo("Current information:");
                 System.out.println("  Full Name: " + user.fullName());
                 System.out.println("  Email: " + user.email());
 
-                System.out.println("\nEnter the new Full name: ");
-                String newFullName = s.nextLine().trim();
-                if (newFullName.isEmpty()) {
+                String newFullName = ConsoleUtils.promptString(s, "Enter new Full name (Enter to keep current): ", false);
+                if (newFullName == null || newFullName.isEmpty()) {
                     newFullName = user.fullName();
                 }
 
-                System.out.print("Enter the new Email: ");
-                String newEmail = s.nextLine().trim();
-                if (newEmail.isEmpty()) {
+                String newEmail = ConsoleUtils.promptString(s, "Enter new Email (Enter to keep current): ", false);
+                if (newEmail == null || newEmail.isEmpty()) {
                     newEmail = user.email();
                 } else {
                     if (!ValidationUtils.isValidEmail(newEmail)) {
-                        System.out.println("Error: Invalid email format");
+                        ConsoleUtils.printError("Invalid email format");
                         return;
                     }
                 }
 
                 try {
                     um.update(username, newFullName, newEmail);
-                    System.out.println("\nUser updated successfully!");
+                    ConsoleUtils.printSuccess("User updated successfully!");
 
                     User updated = um.findByUsername(username).get();
                     System.out.println("  Username: " + updated.username());
                     System.out.println("  Full Name: " + updated.fullName());
                     System.out.println("  Email: " + updated.email());
                 } catch (IllegalArgumentException e) {
-                    System.out.println("Error: " + e.getMessage());
+                    ConsoleUtils.printError(e.getMessage());
                 }
             } else {
-                System.out.println("User '" + username + "' not found");
+                ConsoleUtils.printError("User '" + username + "' not found");
             }
         });
 
         parser.registerCommand("user-delete", "Delete User", (s, sys) -> {
-            System.out.println("\n=== USER DELETE ===");
+            ConsoleUtils.printHeader("DELETE USER");
 
-            System.out.println("Username: ");
-            String username = s.nextLine().trim();
+            String username = ConsoleUtils.promptString(s, "Username: ", true);
 
             UserManager um = sys.getUserManager();
             AssignmentManager am = sys.getAssignmentManager();
@@ -218,13 +215,16 @@ public class CommandRegistry {
             if (optionalUser.isPresent()){
                 User user = optionalUser.get();
 
-                System.out.println("\nAre you sure to delete?(y/n)\n");
-                String answer = s.nextLine().trim();
+                List<RoleAssignment> assignments = am.findByUser(user);
+                int rolesCount = assignments.size();
 
-                if (answer.equals("y") || answer.equals("yes")){
-                    List<RoleAssignment> assignments = am.findByUser(user);
-                    int rolesCount = assignments.size();
+                if (rolesCount > 0) {
+                    ConsoleUtils.printInfo("User has " + rolesCount + " role assignment(s)");
+                }
 
+                boolean confirmed = ConsoleUtils.promptYesNo(s, "Are you sure you want to delete this user?");
+
+                if (confirmed){
                     for (RoleAssignment ra : assignments) {
                         am.remove(ra);
                     }
@@ -234,79 +234,68 @@ public class CommandRegistry {
                     sys.getAuditLog().log("DELETE_USER", sys.getCurrentUser(), username,
                             "Removed " + rolesCount + " role assignment(s)");
 
-                    System.out.println("User '" + username + "' deleted successfully!");
-                } else if (answer.equals("n") || answer.equals("no")){
-                    System.out.println("Deletion cancelled");
+                    ConsoleUtils.printSuccess("User '" + username + "' deleted successfully!");
                 } else {
-                    System.out.println("Answer not correct");
+                    ConsoleUtils.printInfo("Deletion cancelled");
                 }
             } else{
-                System.out.println("User '" + username + "' not found");
+                ConsoleUtils.printError("User '" + username + "' not found");
             }
         });
 
-        parser.registerCommand("user-search","Search user with filters", (s, sys) -> {
-            System.out.println("\n=== Search Users ===");
-            System.out.println("Select filter:");
-            System.out.println("  1. By username (contains)");
-            System.out.println("  2. By email (contains)");
-            System.out.println("  3. By email domain");
-            System.out.println("  4. By full name (contains)");
-            System.out.print("Choice (1-4): ");
+        parser.registerCommand("user-search", "Search user with filters", (s, sys) -> {
+            ConsoleUtils.printHeader("Search Users");
 
-            String choice = s.nextLine().trim();
+            List<String> filterOptions = List.of(
+                    "By username (contains)",
+                    "By email (contains)",
+                    "By email domain",
+                    "By full name (contains)"
+            );
+
+            String choice = ConsoleUtils.promptChoice(s, "Select filter:", filterOptions);
 
             List<User> allUsers = sys.getUserManager().findAll();
             List<User> results = new java.util.ArrayList<>();
             String filterDesc = "";
 
-            if (choice.equals("1")) {
-                System.out.print("Enter username part: ");
-                String part = s.nextLine().trim().toLowerCase();
+            if (choice.equals("By username (contains)")) {
+                String part = ConsoleUtils.promptString(s, "Enter username part: ", true);
                 results = allUsers.stream()
-                        .filter(u -> u.username().toLowerCase().contains(part))
+                        .filter(u -> u.username().toLowerCase().contains(part.toLowerCase()))
                         .collect(java.util.stream.Collectors.toList());
                 filterDesc = "username contains '" + part + "'";
 
-            } else if (choice.equals("2")) {
-                System.out.print("Enter email part: ");
-                String part = s.nextLine().trim().toLowerCase();
+            } else if (choice.equals("By email (contains)")) {
+                String part = ConsoleUtils.promptString(s, "Enter email part: ", true);
                 results = allUsers.stream()
-                        .filter(u -> u.email().toLowerCase().contains(part))
+                        .filter(u -> u.email().toLowerCase().contains(part.toLowerCase()))
                         .collect(java.util.stream.Collectors.toList());
                 filterDesc = "email contains '" + part + "'";
 
-            } else if (choice.equals("3")) {
-                System.out.print("Enter email domain: ");
-                String domain = s.nextLine().trim().toLowerCase();
+            } else if (choice.equals("By email domain")) {
+                String domain = ConsoleUtils.promptString(s, "Enter email domain: ", true);
                 results = allUsers.stream()
-                        .filter(u -> u.email().toLowerCase().endsWith(domain))
+                        .filter(u -> u.email().toLowerCase().endsWith(domain.toLowerCase()))
                         .collect(java.util.stream.Collectors.toList());
                 filterDesc = "email domain '" + domain + "'";
 
-            } else if (choice.equals("4")) {
-                System.out.print("Enter full name part: ");
-                String part = s.nextLine().trim().toLowerCase();
+            } else {
+                String part = ConsoleUtils.promptString(s, "Enter full name part: ", true);
                 results = allUsers.stream()
-                        .filter(u -> u.fullName().toLowerCase().contains(part))
+                        .filter(u -> u.fullName().toLowerCase().contains(part.toLowerCase()))
                         .collect(java.util.stream.Collectors.toList());
                 filterDesc = "full name contains '" + part + "'";
-
-            } else {
-                System.out.println("Invalid choice");
-                return;
             }
 
             if (results.isEmpty()) {
-                System.out.println("\nNo users found with filter: " + filterDesc);
+                ConsoleUtils.printInfo("No users found with filter: " + filterDesc);
             } else {
-                System.out.println("\nSearch results for: " + filterDesc);
+                ConsoleUtils.printSuccess("Search results for: " + filterDesc);
                 System.out.println("\n----------------------------------------");
-
                 for (User user : results) {
                     System.out.println("  " + user.username() + " | " + user.fullName() + " | " + user.email());
                 }
-
                 System.out.println("----------------------------------------");
                 System.out.println("Total: " + results.size() + " users");
             }
@@ -315,41 +304,38 @@ public class CommandRegistry {
         //Команды управления ролями:
 
         parser.registerCommand("role-list", "List all roles", (s, sys) -> {
-            System.out.println("\n=== ROLE LIST ===");
+            ConsoleUtils.printHeader("ROLE LIST");
 
             List<Role> roles = sys.getRoleManager().findAll();
 
             if (roles.isEmpty()) {
-                System.out.println("No roles found.");
+                ConsoleUtils.printInfo("No roles found.");
                 return;
             }
 
             System.out.println("\n----------------------------------------");
-
             for (Role role : roles) {
                 System.out.println("  " + role.name() + " | " +
                         role.getPermissions().size() + " permissions | " +
                         role.getId());
             }
-
             System.out.println("----------------------------------------");
-            System.out.println("Total: " + roles.size() + " roles");
+            ConsoleUtils.printSuccess("Total: " + roles.size() + " roles");
         });
 
         parser.registerCommand("role-create", "Create new role", (s, sys) -> {
-            System.out.println("\n=== CREATE NEW ROLE ===");
+            ConsoleUtils.printHeader("CREATE NEW ROLE");
 
             try{
-                System.out.print("Role name: ");
-                String name = s.nextLine().trim();
+                String name = ConsoleUtils.promptString(s, "Role name: ", true);
 
                 if (name == null || name.trim().isEmpty()) {
-                    System.out.println("Error: Role name cannot be empty");
+                    ConsoleUtils.printError("Role name cannot be empty");
                     return;
                 }
 
-                System.out.print("Role description: ");
-                String description = s.nextLine().trim();
+                String description = ConsoleUtils.promptString(s, "Role description: ", false);
+                if (description == null) description = "";
 
                 Role role = new Role(name, description);
                 sys.getRoleManager().add(role);
@@ -357,57 +343,53 @@ public class CommandRegistry {
                 sys.getAuditLog().log("CREATE_ROLE", sys.getCurrentUser(), name,
                         "Description: " + description);
 
-                System.out.println("\nRole '" + name + "' created successfully!");
+                ConsoleUtils.printSuccess("Role '" + name + "' created successfully!");
                 System.out.println("  ID: " + role.getId());
                 System.out.println("  Description: " + role.getDescription());
 
-                System.out.println("\nDo you want to add permissions to this role? (y/n): ");
-                String answer = s.nextLine().trim().toLowerCase();
+                boolean addPermissions = ConsoleUtils.promptYesNo(s, "Do you want to add permissions to this role?");
 
-                if (answer.equals("y") || answer.equals("yes")) {
+                if (addPermissions) {
                     boolean adding = true;
 
                     while (adding) {
-                        System.out.println("\n--- Add Permission ---");
-                        System.out.print("Permission name (e.g., READ, WRITE, DELETE): ");
-                        String permName = s.nextLine().trim().toUpperCase();
+                        ConsoleUtils.printHeader("Add Permission");
 
-                        System.out.print("Resource (e.g., users, reports, *): ");
-                        String resource = s.nextLine().trim().toLowerCase();
+                        String permName = ConsoleUtils.promptString(s, "Permission name (READ, WRITE, DELETE): ", true);
+                        if (permName != null) permName = permName.toUpperCase();
 
-                        System.out.print("Description: ");
-                        String permDesc = s.nextLine().trim();
+                        String resource = ConsoleUtils.promptString(s, "Resource (users, reports, *): ", true);
+                        if (resource != null) resource = resource.toLowerCase();
+
+                        String permDesc = ConsoleUtils.promptString(s, "Description: ", false);
+                        if (permDesc == null) permDesc = "";
 
                         try {
                             Permission permission = new Permission(permName, resource, permDesc);
                             role.addPermission(permission);
-                            System.out.println("Permission added successfully!");
+                            ConsoleUtils.printSuccess("Permission added successfully!");
 
-                            System.out.print("\nAdd another permission? (y/n): ");
-                            String again = s.nextLine().trim().toLowerCase();
-                            if (!again.equals("y") && !again.equals("yes")) {
-                                adding = false;
-                            }
+                            adding = ConsoleUtils.promptYesNo(s, "Add another permission?");
+
                         } catch (IllegalArgumentException e) {
-                            System.out.println("Error: " + e.getMessage());
+                            ConsoleUtils.printError(e.getMessage());
                         }
                     }
 
-                    System.out.println("\nRole '" + name + "' now has " + role.getPermissions().size() + " permissions.");
+                    ConsoleUtils.printSuccess("Role '" + name + "' now has " + role.getPermissions().size() + " permissions.");
                 }
 
             } catch (IllegalArgumentException e) {
-                System.out.println("Error: " + e.getMessage());
+                ConsoleUtils.printError(e.getMessage());
             } catch (Exception e) {
-                System.out.println("Error creating role: " + e.getMessage());
+                ConsoleUtils.printError("Error creating role: " + e.getMessage());
             }
         });
 
         parser.registerCommand("role-view", "View role", (s, sys) -> {
-            System.out.println("\n=== VIEW ROLE ===");
+            ConsoleUtils.printHeader("VIEW ROLE");
 
-            System.out.print("Role name: ");
-            String roleName = s.nextLine().trim();
+            String roleName = ConsoleUtils.promptString(s, "Role name: ", true);
 
             RoleManager rm = sys.getRoleManager();
             Optional<Role> roleOpt = rm.findByName(roleName);
@@ -416,15 +398,14 @@ public class CommandRegistry {
                 Role role = roleOpt.get();
                 System.out.println(role.format());
             } else {
-                System.out.println("Role '" + roleName + "' not found");
+                ConsoleUtils.printError("Role '" + roleName + "' not found");
             }
         });
 
         parser.registerCommand("role-update", "Update role (name/description)", (s, sys) -> {
-            System.out.println("\n=== UPDATE ROLE ===");
+            ConsoleUtils.printHeader("UPDATE ROLE");
 
-            System.out.print("Role name: ");
-            String roleName = s.nextLine().trim();
+            String roleName = ConsoleUtils.promptString(s, "Role name: ", true);
 
             RoleManager rm = sys.getRoleManager();
             Optional<Role> roleOpt = rm.findByName(roleName);
@@ -432,69 +413,58 @@ public class CommandRegistry {
             if (roleOpt.isPresent()) {
                 Role role = roleOpt.get();
 
-                System.out.println("\nCurrent information:");
+                ConsoleUtils.printInfo("Current information:");
                 System.out.println("  Name: " + role.name());
                 System.out.println("  Description: " + role.getDescription());
 
                 System.out.println("\nEnter new data (press Enter to keep current):");
 
-                System.out.print("New role name: ");
-                String newName = s.nextLine().trim();
-                if (newName.isEmpty()) {
+                String newName = ConsoleUtils.promptString(s, "New role name: ", false);
+                if (newName == null || newName.isEmpty()) {
                     newName = role.name();
-                } else {
-                    if (newName == null || newName.trim().isEmpty()) {
-                        System.out.println("Error: Role name cannot be empty");
-                        return;
-                    }
                 }
 
-                System.out.print("New description: ");
-                String newDescription = s.nextLine().trim();
-                if (newDescription.isEmpty()) {
+                String newDescription = ConsoleUtils.promptString(s, "New description: ", false);
+                if (newDescription == null || newDescription.isEmpty()) {
                     newDescription = role.getDescription();
                 }
 
                 try {
-
                     if (!newName.equals(role.name())) {
                         if (rm.findByName(newName).isPresent()) {
-                            System.out.println("Error: Role with name '" + newName + "' already exists");
+                            ConsoleUtils.printError("Role with name '" + newName + "' already exists");
                             return;
                         }
                     }
 
                     Role updatedRole = new Role(newName, newDescription);
-
                     for (Permission p : role.getPermissions()) {
                         updatedRole.addPermission(p);
                     }
 
                     rm.remove(role);
-
                     rm.add(updatedRole);
 
-                    System.out.println("\nRole updated successfully!");
+                    ConsoleUtils.printSuccess("Role updated successfully!");
                     System.out.println("  Name: " + updatedRole.name());
                     System.out.println("  Description: " + updatedRole.getDescription());
                     System.out.println("  Permissions: " + updatedRole.getPermissions().size());
 
                 } catch (IllegalArgumentException e) {
-                    System.out.println("Error: " + e.getMessage());
+                    ConsoleUtils.printError(e.getMessage());
                 } catch (Exception e) {
-                    System.out.println("Error updating role: " + e.getMessage());
+                    ConsoleUtils.printError("Error updating role: " + e.getMessage());
                 }
 
             } else {
-                System.out.println("Role '" + roleName + "' not found");
+                ConsoleUtils.printError("Role '" + roleName + "' not found");
             }
         });
 
         parser.registerCommand("role-delete", "Delete role", (s, sys) -> {
-            System.out.println("\n=== DELETE ROLE ===");
+            ConsoleUtils.printHeader("DELETE ROLE");
 
-            System.out.print("Role name: ");
-            String roleName = s.nextLine().trim();
+            String roleName = ConsoleUtils.promptString(s, "Role name: ", true);
 
             RoleManager rm = sys.getRoleManager();
             AssignmentManager am = sys.getAssignmentManager();
@@ -508,43 +478,38 @@ public class CommandRegistry {
                 int usersCount = assignments.size();
 
                 if (!assignments.isEmpty()) {
-                    System.out.println("\nError: Role is assigned to " + assignments.size() + " user(s):");
+                    ConsoleUtils.printInfo("Role is assigned to " + usersCount + " user(s):");
                     for (RoleAssignment ra : assignments) {
                         System.out.println("  - " + ra.user().username() + " (" + ra.user().fullName() + ")");
                     }
-                    System.out.println("\nDeleting this role will remove these assignments!");
+                    ConsoleUtils.printInfo("Deleting this role will remove these assignments!");
                 }
 
-                System.out.print("\nAre you sure you want to delete role '" + roleName + "'? (yes/no): ");
-                String answer = s.nextLine().trim().toLowerCase();
+                boolean confirmed = ConsoleUtils.promptYesNo(s, "Are you sure you want to delete this role?");
 
-                if (answer.equals("yes") || answer.equals("y")) {
+                if (confirmed) {
                     for (RoleAssignment ra : assignments) {
                         am.remove(ra);
                     }
-
                     rm.remove(role);
 
                     sys.getAuditLog().log("DELETE_ROLE", sys.getCurrentUser(), roleName,
                             "Removed from " + usersCount + " user(s)");
 
-                    System.out.println("Role '" + roleName + "' deleted successfully!");
-                } else if (answer.equals("no") || answer.equals("n")) {
-                    System.out.println("Deletion cancelled");
+                    ConsoleUtils.printSuccess("Role '" + roleName + "' deleted successfully!");
                 } else {
-                    System.out.println("Answer not correct");
+                    ConsoleUtils.printInfo("Deletion cancelled");
                 }
 
             } else {
-                System.out.println("Role '" + roleName + "' not found");
+                ConsoleUtils.printError("Role '" + roleName + "' not found");
             }
         });
 
         parser.registerCommand("role-add-permission", "Add permission to role", (s, sys) -> {
-            System.out.println("\n=== ADD PERMISSION TO ROLE ===");
+            ConsoleUtils.printHeader("ADD PERMISSION TO ROLE");
 
-            System.out.print("Role name: ");
-            String roleName = s.nextLine().trim();
+            String roleName = ConsoleUtils.promptString(s, "Role name: ", true);
 
             RoleManager rm = sys.getRoleManager();
             Optional<Role> roleOpt = rm.findByName(roleName);
@@ -552,55 +517,40 @@ public class CommandRegistry {
             if (roleOpt.isPresent()) {
                 Role role = roleOpt.get();
 
-                System.out.println("\nCurrent permissions (" + role.getPermissions().size() + "):");
+                ConsoleUtils.printInfo("Current permissions (" + role.getPermissions().size() + "):");
                 for (Permission p : role.getPermissions()) {
                     System.out.println("  - " + p.name() + " on " + p.resource());
                 }
 
-                System.out.println("\n--- New Permission ---");
-                System.out.print("Permission name (READ, WRITE, DELETE): ");
-                String permName = s.nextLine().trim().toUpperCase();
+                ConsoleUtils.printHeader("New Permission");
 
-                if (permName == null || permName.trim().isEmpty()) {
-                    System.out.println("Error: Permission name cannot be empty");
-                    return;
-                }
+                String permName = ConsoleUtils.promptString(s, "Permission name (READ, WRITE, DELETE): ", true);
+                if (permName != null) permName = permName.toUpperCase();
 
-                System.out.print("Resource (users, reports, *): ");
-                String resource = s.nextLine().trim().toLowerCase();
+                String resource = ConsoleUtils.promptString(s, "Resource (users, reports, *): ", true);
+                if (resource != null) resource = resource.toLowerCase();
 
-                if (resource == null || resource.trim().isEmpty()) {
-                    System.out.println("Error: Resource cannot be empty");
-                    return;
-                }
-
-                System.out.print("Description: ");
-                String description = s.nextLine().trim();
-
-                if (description == null || description.trim().isEmpty()) {
-                    System.out.println("Error: Description cannot be empty");
-                    return;
-                }
+                String description = ConsoleUtils.promptString(s, "Description: ", false);
+                if (description == null) description = "";
 
                 try {
                     Permission permission = new Permission(permName, resource, description);
                     role.addPermission(permission);
-                    System.out.println("\nPermission added successfully!");
+                    ConsoleUtils.printSuccess("Permission added successfully!");
                     System.out.println("  " + permission.format());
                 } catch (IllegalArgumentException e) {
-                    System.out.println("Error: " + e.getMessage());
+                    ConsoleUtils.printError(e.getMessage());
                 }
 
             } else {
-                System.out.println("Role '" + roleName + "' not found");
+                ConsoleUtils.printError("Role '" + roleName + "' not found");
             }
         });
 
         parser.registerCommand("role-remove-permission", "Remove permission from role", (s, sys) -> {
-            System.out.println("\n=== REMOVE PERMISSION FROM ROLE ===");
+            ConsoleUtils.printHeader("REMOVE PERMISSION FROM ROLE");
 
-            System.out.print("Role name: ");
-            String roleName = s.nextLine().trim();
+            String roleName = ConsoleUtils.promptString(s, "Role name: ", true);
 
             RoleManager rm = sys.getRoleManager();
             Optional<Role> roleOpt = rm.findByName(roleName);
@@ -611,7 +561,7 @@ public class CommandRegistry {
                 List<Permission> permissions = role.getPermissions().stream().collect(java.util.stream.Collectors.toList());
 
                 if (permissions.isEmpty()) {
-                    System.out.println("Role has no permissions.");
+                    ConsoleUtils.printInfo("Role has no permissions.");
                     return;
                 }
 
@@ -621,101 +571,76 @@ public class CommandRegistry {
                     System.out.println("  " + (i + 1) + ". " + p.name() + " on " + p.resource());
                 }
 
-                System.out.print("\nEnter number to remove: ");
-                String choice = s.nextLine().trim();
+                int choice = ConsoleUtils.promptInt(s, "Enter number to remove", 1, permissions.size());
+                Permission toRemove = permissions.get(choice - 1);
 
-                try {
-                    int index = Integer.parseInt(choice) - 1;
-                    if (index >= 0 && index < permissions.size()) {
-                        Permission toRemove = permissions.get(index);
-                        role.removePermission(toRemove);
-                        System.out.println("Permission removed: " + toRemove.name() + " on " + toRemove.resource());
-                    } else {
-                        System.out.println("Invalid number!");
-                    }
-                } catch (NumberFormatException e) {
-                    System.out.println("Invalid input!");
-                }
+                role.removePermission(toRemove);
+                ConsoleUtils.printSuccess("Permission removed: " + toRemove.name() + " on " + toRemove.resource());
 
             } else {
-                System.out.println("Role '" + roleName + "' not found");
+                ConsoleUtils.printError("Role '" + roleName + "' not found");
             }
         });
 
         parser.registerCommand("role-search", "Search roles", (s, sys) -> {
-            System.out.println("\n=== SEARCH ROLES ===");
-            System.out.println("Select filter:");
-            System.out.println("  1. By name (contains)");
-            System.out.println("  2. By permission (has specific permission)");
-            System.out.println("  3. By minimum number of permissions");
-            System.out.print("Choice (1-3): ");
+            ConsoleUtils.printHeader("SEARCH ROLES");
 
-            String choice = s.nextLine().trim();
+            List<String> filterOptions = List.of(
+                    "By name (contains)",
+                    "By permission (has specific permission)",
+                    "By minimum number of permissions"
+            );
+
+            String choice = ConsoleUtils.promptChoice(s, "Select filter:", filterOptions);
 
             List<Role> allRoles = sys.getRoleManager().findAll();
             List<Role> results = new java.util.ArrayList<>();
             String filterDesc = "";
 
-            if (choice.equals("1")) {
-                System.out.print("Enter role name part: ");
-                String part = s.nextLine().trim().toLowerCase();
+            if (choice.equals("By name (contains)")) {
+                String part = ConsoleUtils.promptString(s, "Enter role name part: ", true);
                 results = allRoles.stream()
-                        .filter(r -> r.name().toLowerCase().contains(part))
+                        .filter(r -> r.name().toLowerCase().contains(part.toLowerCase()))
                         .collect(java.util.stream.Collectors.toList());
                 filterDesc = "name contains '" + part + "'";
 
-            } else if (choice.equals("2")) {
-                System.out.print("Enter permission name (READ, WRITE, DELETE): ");
-                String permName = s.nextLine().trim().toUpperCase();
-                System.out.print("Enter resource (users, reports, *): ");
-                String resource = s.nextLine().trim().toLowerCase();
+            } else if (choice.equals("By permission (has specific permission)")) {
+                String permName = ConsoleUtils.promptString(s, "Enter permission name (READ, WRITE, DELETE): ", true);
+                String resource = ConsoleUtils.promptString(s, "Enter resource (users, reports, *): ", true);
 
                 results = allRoles.stream()
-                        .filter(r -> r.hasPermission(permName, resource))
+                        .filter(r -> r.hasPermission(permName.toUpperCase(), resource.toLowerCase()))
                         .collect(java.util.stream.Collectors.toList());
                 filterDesc = "has permission " + permName + " on " + resource;
 
-            } else if (choice.equals("3")) {
-                System.out.print("Enter minimum number of permissions: ");
-                try {
-                    int min = Integer.parseInt(s.nextLine().trim());
-                    results = allRoles.stream()
-                            .filter(r -> r.getPermissions().size() >= min)
-                            .collect(java.util.stream.Collectors.toList());
-                    filterDesc = "has at least " + min + " permissions";
-                } catch (NumberFormatException e) {
-                    System.out.println("Invalid number!");
-                    return;
-                }
-
             } else {
-                System.out.println("Invalid choice");
-                return;
+                int min = ConsoleUtils.promptInt(s, "Enter minimum number of permissions", 0, 100);
+                results = allRoles.stream()
+                        .filter(r -> r.getPermissions().size() >= min)
+                        .collect(java.util.stream.Collectors.toList());
+                filterDesc = "has at least " + min + " permissions";
             }
 
             if (results.isEmpty()) {
-                System.out.println("\nNo roles found with filter: " + filterDesc);
+                ConsoleUtils.printInfo("No roles found with filter: " + filterDesc);
             } else {
-                System.out.println("\nSearch results for: " + filterDesc);
+                ConsoleUtils.printSuccess("Search results for: " + filterDesc);
                 System.out.println("\n----------------------------------------");
-
                 for (Role role : results) {
                     System.out.println("  - " + role.name() + " (" + role.getPermissions().size() + " permissions)");
                     System.out.println("    ID: " + role.getId());
                 }
-
                 System.out.println("----------------------------------------");
-                System.out.println("Total: " + results.size() + " roles");
+                ConsoleUtils.printSuccess("Total: " + results.size() + " roles");
             }
         });
 
         //Команды управления назначениями:
 
         parser.registerCommand("assign-role", "Assign role to user", (s, sys) -> {
-            System.out.println("\n=== ASSIGN ROLE ===");
+            ConsoleUtils.printHeader("ASSIGN ROLE");
 
-            System.out.print("Username: ");
-            String username = s.nextLine().trim();
+            String username = ConsoleUtils.promptString(s, "Username: ", true);
 
             UserManager um = sys.getUserManager();
             RoleManager rm = sys.getRoleManager();
@@ -723,107 +648,80 @@ public class CommandRegistry {
 
             Optional<User> userOpt = um.findByUsername(username);
             if (userOpt.isEmpty()) {
-                System.out.println("User '" + username + "' not found");
+                ConsoleUtils.printError("User '" + username + "' not found");
                 return;
             }
             User user = userOpt.get();
 
             List<Role> roles = rm.findAll();
             if (roles.isEmpty()) {
-                System.out.println("No roles available. Create a role first.");
+                ConsoleUtils.printError("No roles available. Create a role first.");
                 return;
             }
 
-            System.out.println("\nAvailable roles:");
-            for (int i = 0; i < roles.size(); i++) {
-                System.out.println("  " + (i + 1) + ". " + roles.get(i).name());
-            }
+            Role role = ConsoleUtils.promptChoice(s, "Select role:", roles);
 
-
-            System.out.print("\nSelect role (number): ");
-            int roleIndex;
-            try {
-                roleIndex = Integer.parseInt(s.nextLine().trim()) - 1;
-                if (roleIndex < 0 || roleIndex >= roles.size()) {
-                    System.out.println("Invalid selection");
-                    return;
-                }
-            } catch (NumberFormatException e) {
-                System.out.println("Invalid input");
-                return;
-            }
-            Role role = roles.get(roleIndex);
-
-            System.out.print("\nAssignment type (permanent/temporary): ");
-            String type = s.nextLine().trim().toLowerCase();
-
-            System.out.print("Reason: ");
-            String reason = s.nextLine().trim();
+            String type = ConsoleUtils.promptString(s, "Assignment type (permanent/temporary): ", true);
+            String reason = ConsoleUtils.promptString(s, "Reason: ", false);
+            if (reason == null) reason = "";
 
             AssignmentMetadata metadata = AssignmentMetadata.now(sys.getCurrentUser(), reason);
 
             try {
-                if (type.equals("permanent") || type.equals("p")) {
+                if (type.equalsIgnoreCase("permanent") || type.equals("p")) {
                     PermanentAssignment assignment = new PermanentAssignment(user, role, metadata);
                     am.add(assignment);
 
                     sys.getAuditLog().log("ASSIGN_ROLE", sys.getCurrentUser(),
                             username + " -> " + role.name(), "Type: PERMANENT, Reason: " + reason);
 
-                    System.out.println("\nPermanent role assigned successfully!");
+                    ConsoleUtils.printSuccess("Permanent role assigned successfully!");
                     System.out.println("  User: " + username);
                     System.out.println("  Role: " + role.name());
-                    System.out.println("  Reason: " + reason);
 
-                } else if (type.equals("temporary") || type.equals("t")) {
-                    System.out.print("Expiration date (YYYY-MM-DD): ");
-                    String expiresAt = s.nextLine().trim();
+                } else if (type.equalsIgnoreCase("temporary") || type.equals("t")) {
+                    String expiresAt = ConsoleUtils.promptString(s, "Expiration date (YYYY-MM-DD): ", true);
 
                     if (!ValidationUtils.isValidDate(expiresAt)) {
-                        System.out.println("Error: Invalid date format. Use YYYY-MM-DD");
+                        ConsoleUtils.printError("Invalid date format. Use YYYY-MM-DD");
                         return;
                     }
 
-                    System.out.print("Auto-renew? (y/n): ");
-                    boolean autoRenew = s.nextLine().trim().toLowerCase().equals("y");
+                    boolean autoRenew = ConsoleUtils.promptYesNo(s, "Auto-renew?");
 
                     TemporaryAssignment assignment = new TemporaryAssignment(user, role, metadata, expiresAt, autoRenew);
-
                     am.add(assignment);
 
                     sys.getAuditLog().log("ASSIGN_ROLE", sys.getCurrentUser(),
                             username + " -> " + role.name(), "Type: TEMPORARY, Expires: " + expiresAt + ", Reason: " + reason);
 
-                    System.out.println("\nTemporary role assigned successfully!");
+                    ConsoleUtils.printSuccess("Temporary role assigned successfully!");
                     System.out.println("  User: " + username);
                     System.out.println("  Role: " + role.name());
                     System.out.println("  Expires: " + expiresAt);
-                    System.out.println("  Auto-renew: " + (autoRenew ? "Yes" : "No"));
-                    System.out.println("  Reason: " + reason);
 
                 } else {
-                    System.out.println("Invalid type. Use 'permanent' or 'temporary'");
+                    ConsoleUtils.printError("Invalid type. Use 'permanent' or 'temporary'");
                 }
 
             } catch (IllegalStateException e) {
-                System.out.println("Error: " + e.getMessage());
+                ConsoleUtils.printError(e.getMessage());
             } catch (Exception e) {
-                System.out.println("Error creating assignment: " + e.getMessage());
+                ConsoleUtils.printError("Error creating assignment: " + e.getMessage());
             }
         });
 
         parser.registerCommand("revoke-role", "Revoke role from user", (s, sys) -> {
-            System.out.println("\n=== REVOKE ROLE ===");
+            ConsoleUtils.printHeader("REVOKE ROLE");
 
-            System.out.print("Username: ");
-            String username = s.nextLine().trim();
+            String username = ConsoleUtils.promptString(s, "Username: ", true);
 
             UserManager um = sys.getUserManager();
             AssignmentManager am = sys.getAssignmentManager();
 
             Optional<User> userOpt = um.findByUsername(username);
             if (userOpt.isEmpty()) {
-                System.out.println("User '" + username + "' not found");
+                ConsoleUtils.printError("User '" + username + "' not found");
                 return;
             }
             User user = userOpt.get();
@@ -833,35 +731,19 @@ public class CommandRegistry {
                     .collect(java.util.stream.Collectors.toList());
 
             if (activeAssignments.isEmpty()) {
-                System.out.println("No active assignments for user '" + username + "'");
+                ConsoleUtils.printError("No active assignments for user '" + username + "'");
                 return;
             }
 
-            System.out.println("\nActive assignments for " + username + ":");
-            for (int i = 0; i < activeAssignments.size(); i++) {
-                RoleAssignment ra = activeAssignments.get(i);
-                String typeInfo = ra.assignmentType();
-                if (ra instanceof TemporaryAssignment) {
-                    typeInfo += " (expires: " + ((TemporaryAssignment) ra).getExpiresAt() + ")";
-                }
-                System.out.println("  " + (i + 1) + ". " + ra.role().name() + " - " + typeInfo);
-            }
-
-            System.out.print("\nSelect assignment to revoke (number): ");
-            int choice;
-            try {
-                choice = Integer.parseInt(s.nextLine().trim()) - 1;
-                if (choice < 0 || choice >= activeAssignments.size()) {
-                    System.out.println("Invalid selection");
-                    return;
-                }
-            } catch (NumberFormatException e) {
-                System.out.println("Invalid input");
-                return;
-            }
-
-            RoleAssignment toRevoke = activeAssignments.get(choice);
+            RoleAssignment toRevoke = ConsoleUtils.promptChoice(s, "Select assignment to revoke:", activeAssignments);
             String roleName = toRevoke.role().name();
+
+            boolean confirmed = ConsoleUtils.promptYesNo(s, "Are you sure you want to revoke this role?");
+
+            if (!confirmed) {
+                ConsoleUtils.printInfo("Operation cancelled");
+                return;
+            }
 
             if (toRevoke instanceof PermanentAssignment) {
                 ((PermanentAssignment) toRevoke).revoke();
@@ -869,31 +751,34 @@ public class CommandRegistry {
                 sys.getAuditLog().log("REVOKE_ROLE", sys.getCurrentUser(),
                         username + " <- " + roleName, "Type: PERMANENT");
 
-                System.out.println("\nPermanent assignment revoked successfully!");
+                ConsoleUtils.printSuccess("Permanent assignment revoked successfully!");
                 System.out.println("  User: " + username);
-                System.out.println("  Role: " + toRevoke.role().name());
+                System.out.println("  Role: " + roleName);
 
             } else if (toRevoke instanceof TemporaryAssignment) {
                 String yesterday = java.time.LocalDate.now().minusDays(1).toString();
                 ((TemporaryAssignment) toRevoke).extend(yesterday);
-                System.out.println("\nTemporary assignment expired successfully!");
+
+                sys.getAuditLog().log("REVOKE_ROLE", sys.getCurrentUser(),
+                        username + " <- " + roleName, "Type: TEMPORARY");
+
+                ConsoleUtils.printSuccess("Temporary assignment expired successfully!");
                 System.out.println("  User: " + username);
-                System.out.println("  Role: " + toRevoke.role().name());
+                System.out.println("  Role: " + roleName);
             }
         });
 
         parser.registerCommand("assignment-list", "List all assignments", (s, sys) -> {
-            System.out.println("\n=== ASSIGNMENT LIST ===");
+            ConsoleUtils.printHeader("ASSIGNMENT LIST");
 
             List<RoleAssignment> assignments = sys.getAssignmentManager().findAll();
 
             if (assignments.isEmpty()) {
-                System.out.println("No assignments found.");
+                ConsoleUtils.printInfo("No assignments found.");
                 return;
             }
 
             System.out.println("\n----------------------------------------");
-
             for (RoleAssignment ra : assignments) {
                 String status = ra.isActive() ? "ACTIVE" : "INACTIVE";
                 System.out.println("  " + ra.user().username() + " | " +
@@ -902,23 +787,21 @@ public class CommandRegistry {
                         status + " | " +
                         ra.metadata().assignedAt());
             }
-
             System.out.println("----------------------------------------");
-            System.out.println("Total: " + assignments.size() + " assignments");
+            ConsoleUtils.printSuccess("Total: " + assignments.size() + " assignments");
         });
 
         parser.registerCommand("assignment-list-user", "List user assignments", (s, sys) -> {
-            System.out.println("\n=== LIST USER ASSIGNMENTS ===");
+            ConsoleUtils.printHeader("LIST USER ASSIGNMENTS");
 
-            System.out.print("Username: ");
-            String username = s.nextLine().trim();
+            String username = ConsoleUtils.promptString(s, "Username: ", true);
 
             UserManager um = sys.getUserManager();
             AssignmentManager am = sys.getAssignmentManager();
 
             Optional<User> userOpt = um.findByUsername(username);
             if (userOpt.isEmpty()) {
-                System.out.println("User '" + username + "' not found");
+                ConsoleUtils.printError("User '" + username + "' not found");
                 return;
             }
             User user = userOpt.get();
@@ -926,11 +809,11 @@ public class CommandRegistry {
             List<RoleAssignment> assignments = am.findByUser(user);
 
             if (assignments.isEmpty()) {
-                System.out.println("No assignments for user '" + username + "'");
+                ConsoleUtils.printInfo("No assignments for user '" + username + "'");
                 return;
             }
 
-            System.out.println("\nAssignments for " + user.username() + " (" + user.fullName() + "):");
+            ConsoleUtils.printInfo("Assignments for " + user.username() + " (" + user.fullName() + "):");
             System.out.println("-".repeat(60));
 
             for (RoleAssignment ra : assignments) {
@@ -948,21 +831,20 @@ public class CommandRegistry {
                 }
             }
             System.out.println("\n" + "-".repeat(60));
-            System.out.println("Total: " + assignments.size() + " assignments");
+            ConsoleUtils.printSuccess("Total: " + assignments.size() + " assignments");
         });
 
         parser.registerCommand("assignment-list-role", "List users by role", (s, sys) -> {
-            System.out.println("\n=== LIST ROLE ASSIGNMENTS ===");
+            ConsoleUtils.printHeader("LIST ROLE ASSIGNMENTS");
 
-            System.out.print("Role name: ");
-            String roleName = s.nextLine().trim();
+            String roleName = ConsoleUtils.promptString(s, "Role name: ", true);
 
             RoleManager rm = sys.getRoleManager();
             AssignmentManager am = sys.getAssignmentManager();
 
             Optional<Role> roleOpt = rm.findByName(roleName);
             if (roleOpt.isEmpty()) {
-                System.out.println("Role '" + roleName + "' not found");
+                ConsoleUtils.printError("Role '" + roleName + "' not found");
                 return;
             }
             Role role = roleOpt.get();
@@ -970,11 +852,11 @@ public class CommandRegistry {
             List<RoleAssignment> assignments = am.findByRole(role);
 
             if (assignments.isEmpty()) {
-                System.out.println("No users have role '" + roleName + "'");
+                ConsoleUtils.printInfo("No users have role '" + roleName + "'");
                 return;
             }
 
-            System.out.println("\nUsers with role '" + roleName + "':");
+            ConsoleUtils.printSuccess("Users with role '" + roleName + "':");
             System.out.println("-".repeat(50));
 
             for (RoleAssignment ra : assignments) {
@@ -983,16 +865,16 @@ public class CommandRegistry {
             }
 
             System.out.println("-".repeat(50));
-            System.out.println("Total: " + assignments.size() + " users");
+            ConsoleUtils.printSuccess("Total: " + assignments.size() + " users");
         });
 
         parser.registerCommand("assignment-active", "Show active assignments", (s, sys) -> {
-            System.out.println("\n=== ACTIVE ASSIGNMENTS ===");
+            ConsoleUtils.printHeader("ACTIVE ASSIGNMENTS");
 
             List<RoleAssignment> active = sys.getAssignmentManager().getActiveAssignments();
 
             if (active.isEmpty()) {
-                System.out.println("No active assignments.");
+                ConsoleUtils.printInfo("No active assignments.");
                 return;
             }
 
@@ -1015,18 +897,18 @@ public class CommandRegistry {
                 );
             }
             System.out.println("-".repeat(75));
-            System.out.println("Total: " + active.size() + " active assignments");
+            ConsoleUtils.printSuccess("Total: " + active.size() + " active assignments");
         });
 
         parser.registerCommand("assignment-expired", "Show expired assignments", (s, sys) -> {
-            System.out.println("\n=== EXPIRED ASSIGNMENTS ===");
+            ConsoleUtils.printHeader("EXPIRED ASSIGNMENTS");
 
             List<RoleAssignment> expired = sys.getAssignmentManager().findAll().stream()
                     .filter(ra -> ra instanceof TemporaryAssignment && !ra.isActive())
                     .collect(java.util.stream.Collectors.toList());
 
             if (expired.isEmpty()) {
-                System.out.println("No expired assignments.");
+                ConsoleUtils.printInfo("No expired assignments.");
                 return;
             }
 
@@ -1038,44 +920,35 @@ public class CommandRegistry {
                 System.out.println("  - " + ra.user().username() + " | " + ra.role().name() + " | Expired: " + temp.getExpiresAt());
             }
             System.out.println("-".repeat(60));
-            System.out.println("Total: " + expired.size() + " expired assignments");
+            ConsoleUtils.printSuccess("Total: " + expired.size() + " expired assignments");
         });
 
         parser.registerCommand("assignment-extend", "Extend temporary assignment", (s, sys) -> {
-            System.out.println("\n=== EXTEND ASSIGNMENT ===");
+            ConsoleUtils.printHeader("EXTEND ASSIGNMENT");
 
-            System.out.println("Search by:");
-            System.out.println("  1. Assignment ID");
-            System.out.println("  2. Username + Role");
-            System.out.print("Choice (1-2): ");
-
-            String choice = s.nextLine().trim();
+            List<String> searchOptions = List.of("Search by Assignment ID", "Search by Username + Role");
+            String searchType = ConsoleUtils.promptChoice(s, "Search by:", searchOptions);
 
             AssignmentManager am = sys.getAssignmentManager();
             TemporaryAssignment temp = null;
 
-            if (choice.equals("1")) {
-                System.out.print("Assignment ID: ");
-                String assignmentId = s.nextLine().trim();
-
+            if (searchType.equals("Search by Assignment ID")) {
+                String assignmentId = ConsoleUtils.promptString(s, "Assignment ID: ", true);
                 Optional<RoleAssignment> assignmentOpt = am.findById(assignmentId);
                 if (assignmentOpt.isEmpty()) {
-                    System.out.println("Assignment not found");
+                    ConsoleUtils.printError("Assignment not found");
                     return;
                 }
-
                 RoleAssignment ra = assignmentOpt.get();
                 if (!(ra instanceof TemporaryAssignment)) {
-                    System.out.println("Only temporary assignments can be extended");
+                    ConsoleUtils.printError("Only temporary assignments can be extended");
                     return;
                 }
                 temp = (TemporaryAssignment) ra;
 
-            } else if (choice.equals("2")) {
-                System.out.print("Username: ");
-                String username = s.nextLine().trim();
-                System.out.print("Role name: ");
-                String roleName = s.nextLine().trim();
+            } else {
+                String username = ConsoleUtils.promptString(s, "Username: ", true);
+                String roleName = ConsoleUtils.promptString(s, "Role name: ", true);
 
                 UserManager um = sys.getUserManager();
                 RoleManager rm = sys.getRoleManager();
@@ -1084,57 +957,42 @@ public class CommandRegistry {
                 Optional<Role> roleOpt = rm.findByName(roleName);
 
                 if (userOpt.isEmpty() || roleOpt.isEmpty()) {
-                    System.out.println("User or role not found");
+                    ConsoleUtils.printError("User or role not found");
                     return;
                 }
 
-                User user = userOpt.get();
-                Role role = roleOpt.get();
-
-                List<RoleAssignment> assignments = am.findByUser(user).stream()
-                        .filter(ra -> ra.role().equals(role))
+                List<RoleAssignment> assignments = am.findByUser(userOpt.get()).stream()
+                        .filter(ra -> ra.role().equals(roleOpt.get()))
                         .filter(ra -> ra instanceof TemporaryAssignment)
                         .collect(java.util.stream.Collectors.toList());
 
                 if (assignments.isEmpty()) {
-                    System.out.println("No temporary assignment found for this user and role");
+                    ConsoleUtils.printError("No temporary assignment found");
                     return;
                 }
 
                 if (assignments.size() > 1) {
-                    System.out.println("Multiple assignments found:");
-                    for (int i = 0; i < assignments.size(); i++) {
-                        System.out.println("  " + (i + 1) + ". ID: " + assignments.get(i).assignmentId());
-                    }
-                    System.out.print("Select assignment (number): ");
-                    int idx = Integer.parseInt(s.nextLine().trim()) - 1;
-                    if (idx >= 0 && idx < assignments.size()) {
-                        temp = (TemporaryAssignment) assignments.get(idx);
-                    } else {
-                        System.out.println("Invalid selection");
-                        return;
-                    }
+                    List<String> assignmentOptions = assignments.stream()
+                            .map(ra -> ra.assignmentId() + " - " + ra.role().name())
+                            .collect(java.util.stream.Collectors.toList());
+                    String selected = ConsoleUtils.promptChoice(s, "Multiple assignments found:", assignmentOptions);
+                    temp = (TemporaryAssignment) assignments.get(assignmentOptions.indexOf(selected));
                 } else {
                     temp = (TemporaryAssignment) assignments.get(0);
                 }
-
-            } else {
-                System.out.println("Invalid choice");
-                return;
             }
 
             if (temp != null) {
-                System.out.println("\nCurrent expiration: " + temp.getExpiresAt());
-                System.out.print("New expiration date (YYYY-MM-DD): ");
-                String newDate = s.nextLine().trim();
+                ConsoleUtils.printInfo("Current expiration: " + temp.getExpiresAt());
+                String newDate = ConsoleUtils.promptString(s, "New expiration date (YYYY-MM-DD): ", true);
 
                 if (!ValidationUtils.isValidDate(newDate)) {
-                    System.out.println("Error: Invalid date format. Use YYYY-MM-DD");
+                    ConsoleUtils.printError("Invalid date format. Use YYYY-MM-DD");
                     return;
                 }
 
                 temp.extend(newDate);
-                System.out.println("Assignment extended successfully!");
+                ConsoleUtils.printSuccess("Assignment extended successfully!");
                 System.out.println("  User: " + temp.user().username());
                 System.out.println("  Role: " + temp.role().name());
                 System.out.println("  New expiration: " + newDate);
@@ -1142,17 +1000,18 @@ public class CommandRegistry {
         });
 
         parser.registerCommand("assignment-search", "Search assignments", (s, sys) -> {
-            System.out.println("\n=== SEARCH ASSIGNMENTS ===");
-            System.out.println("Select filter:");
-            System.out.println("  1. By user");
-            System.out.println("  2. By role");
-            System.out.println("  3. By type (permanent/temporary)");
-            System.out.println("  4. By status (active/inactive)");
-            System.out.println("  5. Assigned after date");
-            System.out.println("  6. Expiring before date");
-            System.out.print("Choice (1-6): ");
+            ConsoleUtils.printHeader("SEARCH ASSIGNMENTS");
 
-            String choice = s.nextLine().trim();
+            List<String> filterOptions = List.of(
+                    "By user",
+                    "By role",
+                    "By type (permanent/temporary)",
+                    "By status (active/inactive)",
+                    "Assigned after date",
+                    "Expiring before date"
+            );
+
+            String choice = ConsoleUtils.promptChoice(s, "Select filter:", filterOptions);
 
             AssignmentManager am = sys.getAssignmentManager();
             List<RoleAssignment> allAssignments = am.findAll();
@@ -1160,76 +1019,66 @@ public class CommandRegistry {
             String filterDesc = "";
 
             try {
-                if (choice.equals("1")) {
-                    System.out.print("Username: ");
-                    String username = s.nextLine().trim();
+                if (choice.equals("By user")) {
+                    String username = ConsoleUtils.promptString(s, "Username: ", true);
                     Optional<User> userOpt = sys.getUserManager().findByUsername(username);
                     if (userOpt.isEmpty()) {
-                        System.out.println("User not found");
+                        ConsoleUtils.printError("User not found");
                         return;
                     }
                     results = am.findByUser(userOpt.get());
                     filterDesc = "user = " + username;
 
-                } else if (choice.equals("2")) {
-                    System.out.print("Role name: ");
-                    String roleName = s.nextLine().trim();
+                } else if (choice.equals("By role")) {
+                    String roleName = ConsoleUtils.promptString(s, "Role name: ", true);
                     Optional<Role> roleOpt = sys.getRoleManager().findByName(roleName);
                     if (roleOpt.isEmpty()) {
-                        System.out.println("Role not found");
+                        ConsoleUtils.printError("Role not found");
                         return;
                     }
                     results = am.findByRole(roleOpt.get());
                     filterDesc = "role = " + roleName;
 
-                } else if (choice.equals("3")) {
-                    System.out.print("Type (permanent/temporary): ");
-                    String type = s.nextLine().trim().toLowerCase();
+                } else if (choice.equals("By type (permanent/temporary)")) {
+                    String type = ConsoleUtils.promptString(s, "Type (permanent/temporary): ", true);
                     results = allAssignments.stream()
-                            .filter(ra -> ra.assignmentType().toLowerCase().equals(type))
+                            .filter(ra -> ra.assignmentType().toLowerCase().equals(type.toLowerCase()))
                             .collect(java.util.stream.Collectors.toList());
                     filterDesc = "type = " + type;
 
-                } else if (choice.equals("4")) {
-                    System.out.print("Status (active/inactive): ");
-                    String status = s.nextLine().trim().toLowerCase();
+                } else if (choice.equals("By status (active/inactive)")) {
+                    String status = ConsoleUtils.promptString(s, "Status (active/inactive): ", true);
                     boolean active = status.equals("active");
                     results = allAssignments.stream()
                             .filter(ra -> ra.isActive() == active)
                             .collect(java.util.stream.Collectors.toList());
                     filterDesc = "status = " + status;
 
-                } else if (choice.equals("5")) {
-                    System.out.print("Date (YYYY-MM-DD): ");
-                    String date = s.nextLine().trim();
+                } else if (choice.equals("Assigned after date")) {
+                    String date = ConsoleUtils.promptString(s, "Date (YYYY-MM-DD): ", true);
                     results = allAssignments.stream()
                             .filter(ra -> ra.metadata().assignedAt().compareTo(date) > 0)
                             .collect(java.util.stream.Collectors.toList());
                     filterDesc = "assigned after " + date;
 
-                } else if (choice.equals("6")) {
-                    System.out.print("Date (YYYY-MM-DD): ");
-                    String date = s.nextLine().trim();
+                } else {
+                    String date = ConsoleUtils.promptString(s, "Date (YYYY-MM-DD): ", true);
                     results = allAssignments.stream()
                             .filter(ra -> ra instanceof TemporaryAssignment)
                             .filter(ra -> ((TemporaryAssignment) ra).getExpiresAt().compareTo(date) < 0)
                             .collect(java.util.stream.Collectors.toList());
                     filterDesc = "expiring before " + date;
-
-                } else {
-                    System.out.println("Invalid choice");
-                    return;
                 }
 
             } catch (Exception e) {
-                System.out.println("Error: " + e.getMessage());
+                ConsoleUtils.printError(e.getMessage());
                 return;
             }
 
             if (results.isEmpty()) {
-                System.out.println("\nNo assignments found with filter: " + filterDesc);
+                ConsoleUtils.printInfo("No assignments found with filter: " + filterDesc);
             } else {
-                System.out.println("\nSearch results for: " + filterDesc);
+                ConsoleUtils.printSuccess("Search results for: " + filterDesc);
                 System.out.println("\n" + "-".repeat(70));
                 System.out.printf("| %-15s | %-15s | %-10s | %-8s |\n",
                         "USERNAME", "ROLE", "TYPE", "STATUS");
@@ -1244,24 +1093,23 @@ public class CommandRegistry {
                     );
                 }
                 System.out.println("-".repeat(70));
-                System.out.println("Total: " + results.size() + " assignments");
+                ConsoleUtils.printSuccess("Total: " + results.size() + " assignments");
             }
         });
 
         //Команды просмотра прав:
 
         parser.registerCommand("permissions-user", "Show all permissions of a user", (s, sys) -> {
-            System.out.println("\n=== USER PERMISSIONS ===");
+            ConsoleUtils.printHeader("USER PERMISSIONS");
 
-            System.out.print("Username: ");
-            String username = s.nextLine().trim();
+            String username = ConsoleUtils.promptString(s, "Username: ", true);
 
             UserManager um = sys.getUserManager();
             AssignmentManager am = sys.getAssignmentManager();
 
             Optional<User> userOpt = um.findByUsername(username);
             if (userOpt.isEmpty()) {
-                System.out.println("User '" + username + "' not found");
+                ConsoleUtils.printError("User '" + username + "' not found");
                 return;
             }
             User user = userOpt.get();
@@ -1269,11 +1117,11 @@ public class CommandRegistry {
             var permissions = am.getUserPermissions(user);
 
             if (permissions.isEmpty()) {
-                System.out.println("\nUser '" + username + "' has no permissions.");
+                ConsoleUtils.printInfo("User '" + username + "' has no permissions.");
                 return;
             }
 
-            System.out.println("\nPermissions for " + user.username() + " (" + user.fullName() + "):");
+            ConsoleUtils.printSuccess("Permissions for " + user.username() + " (" + user.fullName() + "):");
             System.out.println("-".repeat(50));
 
             java.util.Map<String, java.util.Set<String>> groupedByResource = new java.util.HashMap<>();
@@ -1288,46 +1136,43 @@ public class CommandRegistry {
             }
 
             System.out.println("\n" + "-".repeat(50));
-            System.out.println("Total permissions: " + permissions.size());
+            ConsoleUtils.printSuccess("Total permissions: " + permissions.size());
         });
 
         parser.registerCommand("permissions-check", "Check if user has specific permission", (s, sys) -> {
-            System.out.println("\n=== CHECK PERMISSION ===");
+            ConsoleUtils.printHeader("CHECK PERMISSION");
 
-            System.out.print("Username: ");
-            String username = s.nextLine().trim();
-
-            System.out.print("Permission name (READ, WRITE, DELETE): ");
-            String permName = s.nextLine().trim().toUpperCase();
-
-            System.out.print("Resource (users, reports, *): ");
-            String resource = s.nextLine().trim().toLowerCase();
+            String username = ConsoleUtils.promptString(s, "Username: ", true);
+            String permName = ConsoleUtils.promptString(s, "Permission name (READ, WRITE, DELETE): ", true);
+            String resource = ConsoleUtils.promptString(s, "Resource (users, reports, *): ", true);
 
             UserManager um = sys.getUserManager();
             AssignmentManager am = sys.getAssignmentManager();
 
             Optional<User> userOpt = um.findByUsername(username);
             if (userOpt.isEmpty()) {
-                System.out.println("User '" + username + "' not found");
+                ConsoleUtils.printError("User '" + username + "' not found");
                 return;
             }
             User user = userOpt.get();
 
-            boolean hasPermission = am.userHasPermission(user, permName, resource);
+            boolean hasPermission = am.userHasPermission(user, permName.toUpperCase(), resource.toLowerCase());
 
             System.out.println("\n" + "-".repeat(50));
             System.out.println("User: " + username);
             System.out.println("Permission: " + permName + " on " + resource);
-            System.out.println("Result: " + (hasPermission ? "HAS PERMISSION" : "NO PERMISSION"));
 
             if (hasPermission) {
+                ConsoleUtils.printSuccess("Result: HAS PERMISSION");
                 System.out.println("\nGranted through roles:");
                 List<RoleAssignment> assignments = am.findByUser(user);
                 for (RoleAssignment ra : assignments) {
-                    if (ra.isActive() && ra.role().hasPermission(permName, resource)) {
+                    if (ra.isActive() && ra.role().hasPermission(permName.toUpperCase(), resource.toLowerCase())) {
                         System.out.println("  - " + ra.role().name() + " (" + ra.assignmentType() + ")");
                     }
                 }
+            } else {
+                ConsoleUtils.printError("Result: NO PERMISSION");
             }
             System.out.println("-".repeat(50));
         });
@@ -1339,9 +1184,10 @@ public class CommandRegistry {
         });
 
         parser.registerCommand("stats", "Show system statistics", (s, sys) -> {
+            ConsoleUtils.printHeader("SYSTEM STATISTICS");
             System.out.println(sys.generateStatistics());
 
-            System.out.println("\n=== DETAILED STATISTICS ===");
+            ConsoleUtils.printHeader("DETAILED STATISTICS");
 
             UserManager um = sys.getUserManager();
             AssignmentManager am = sys.getAssignmentManager();
@@ -1386,28 +1232,25 @@ public class CommandRegistry {
         });
 
         parser.registerCommand("exit", "Exit the program", (s, sys) -> {
-            System.out.print("\nAre you sure you want to exit? (y/n): ");
-            String answer = s.nextLine().trim().toLowerCase();
+            boolean confirmed = ConsoleUtils.promptYesNo(s, "Are you sure you want to exit?");
 
-            if (answer.equals("yes") || answer.equals("y")) {
+            if (confirmed) {
+                ConsoleUtils.printSuccess("Goodbye!");
                 System.exit(0);
             } else {
-                System.out.println("Exit cancelled.");
+                ConsoleUtils.printInfo("Exit cancelled.");
             }
         });
 
         parser.registerCommand("save", "Save data to file", (s, sys) -> {
-            System.out.println("\n=== SAVE DATA ===");
+            ConsoleUtils.printHeader("SAVE DATA");
 
-            System.out.print("Enter filename: ");
-            String filename = s.nextLine().trim();
-
-            if (filename.isEmpty()) {
+            String filename = ConsoleUtils.promptString(s, "Enter filename: ", false);
+            if (filename == null || filename.isEmpty()) {
                 filename = "rbac_data.txt";
             }
 
             try (java.io.PrintWriter writer = new java.io.PrintWriter(new java.io.FileWriter(filename))) {
-
                 writer.println("[USERS]");
                 for (User user : sys.getUserManager().findAll()) {
                     writer.println(user.username() + "|" + user.fullName() + "|" + user.email());
@@ -1428,35 +1271,35 @@ public class CommandRegistry {
                     String status = ra.isActive() ? "ACTIVE" : "INACTIVE";
                     writer.print(ra.user().username() + "|" + ra.role().name() + "|" + type + "|" + status);
                     writer.print("|" + ra.metadata().assignedBy() + "|" + ra.metadata().assignedAt() + "|" + ra.metadata().reason());
-
                     if (ra instanceof TemporaryAssignment) {
                         writer.print("|" + ((TemporaryAssignment) ra).getExpiresAt());
                     }
                     writer.println();
                 }
 
-                System.out.println("Data saved to '" + filename + "' successfully!");
-
+                ConsoleUtils.printSuccess("Data saved to '" + filename + "' successfully!");
             } catch (java.io.IOException e) {
-                System.out.println("Error saving data: " + e.getMessage());
+                ConsoleUtils.printError("Error saving data: " + e.getMessage());
             }
         });
 
         parser.registerCommand("load", "Load data from file", (s, sys) -> {
-            System.out.println("\n=== LOAD DATA ===");
+            ConsoleUtils.printHeader("LOAD DATA");
 
-            System.out.print("Enter filename: ");
-            String filename = s.nextLine().trim();
-
-            if (filename.isEmpty()) {
-                System.out.println("No filename provided");
+            String filename = ConsoleUtils.promptString(s, "Enter filename: ", true);
+            if (filename == null || filename.isEmpty()) {
+                ConsoleUtils.printError("No filename provided");
                 return;
             }
 
             try (java.io.BufferedReader reader = new java.io.BufferedReader(new java.io.FileReader(filename))) {
-
                 String line;
                 String section = "";
+
+                int usersLoaded = 0;
+                int rolesLoaded = 0;
+                int assignmentsLoaded = 0;
+                int errorsSkipped = 0;
 
                 UserManager um = sys.getUserManager();
                 RoleManager rm = sys.getRoleManager();
@@ -1468,7 +1311,6 @@ public class CommandRegistry {
 
                 while ((line = reader.readLine()) != null) {
                     line = line.trim();
-
                     if (line.isEmpty()) continue;
 
                     if (line.equals("[USERS]")) {
@@ -1488,27 +1330,35 @@ public class CommandRegistry {
                             try {
                                 User user = User.create(parts[0], parts[1], parts[2]);
                                 um.add(user);
+                                usersLoaded++;
                             } catch (IllegalArgumentException e) {
-                                System.out.println("Skipping user: " + e.getMessage());
+                                System.out.println("  Skipping user '" + parts[0] + "': " + e.getMessage());
+                                errorsSkipped++;
                             }
                         }
 
                     } else if (section.equals("ROLES")) {
                         String[] parts = line.split("\\|");
                         if (parts.length >= 2) {
-                            Role role = new Role(parts[0], parts[1]);
-                            for (int i = 2; i < parts.length; i++) {
-                                String[] permParts = parts[i].split(":");
-                                if (permParts.length >= 3) {
-                                    try {
-                                        Permission p = new Permission(permParts[0], permParts[1], permParts[2]);
-                                        role.addPermission(p);
-                                    } catch (IllegalArgumentException e) {
-                                        System.out.println("Skipping permission: " + e.getMessage());
+                            try {
+                                Role role = new Role(parts[0], parts[1]);
+                                for (int i = 2; i < parts.length; i++) {
+                                    String[] permParts = parts[i].split(":");
+                                    if (permParts.length >= 3) {
+                                        try {
+                                            role.addPermission(new Permission(permParts[0], permParts[1], permParts[2]));
+                                        } catch (IllegalArgumentException e) {
+                                            System.out.println("  Skipping permission '" + permParts[0] + "': " + e.getMessage());
+                                            errorsSkipped++;
+                                        }
                                     }
                                 }
+                                rm.add(role);
+                                rolesLoaded++;
+                            } catch (IllegalArgumentException e) {
+                                System.out.println("  Skipping role '" + parts[0] + "': " + e.getMessage());
+                                errorsSkipped++;
                             }
-                            rm.add(role);
                         }
 
                     } else if (section.equals("ASSIGNMENTS")) {
@@ -1532,100 +1382,103 @@ public class CommandRegistry {
                                     if (type.equals("PERMANENT")) {
                                         PermanentAssignment assignment = new PermanentAssignment(userOpt.get(), roleOpt.get(), metadata);
                                         am.add(assignment);
+                                        assignmentsLoaded++;
                                     } else if (type.equals("TEMPORARY") && expiresAt != null) {
                                         TemporaryAssignment assignment = new TemporaryAssignment(userOpt.get(), roleOpt.get(), metadata, expiresAt, false);
                                         am.add(assignment);
+                                        assignmentsLoaded++;
                                     }
                                 } catch (IllegalStateException e) {
-                                    System.out.println("Skipping assignment: " + e.getMessage());
+                                    System.out.println("  Skipping assignment '" + username + " -> " + roleName + "': " + e.getMessage());
+                                    errorsSkipped++;
                                 }
+                            } else {
+                                System.out.println("  Skipping assignment '" + username + " -> " + roleName + "': User or role not found");
+                                errorsSkipped++;
                             }
                         }
                     }
                 }
 
-                System.out.println("Data loaded from '" + filename + "' successfully!");
-                System.out.println("Users: " + um.count());
-                System.out.println("Roles: " + rm.count());
-                System.out.println("Assignments: " + am.count());
+                ConsoleUtils.printSuccess("Data loaded from '" + filename + "' successfully!");
+                System.out.println("  Users loaded: " + usersLoaded);
+                System.out.println("  Roles loaded: " + rolesLoaded);
+                System.out.println("  Assignments loaded: " + assignmentsLoaded);
+
+                if (errorsSkipped > 0) {
+                    ConsoleUtils.printInfo("Skipped " + errorsSkipped + " entries due to errors");
+                }
 
             } catch (java.io.FileNotFoundException e) {
-                System.out.println("File not found: " + filename);
+                ConsoleUtils.printError("File not found: " + filename);
             } catch (java.io.IOException e) {
-                System.out.println("Error loading data: " + e.getMessage());
+                ConsoleUtils.printError("Error loading data: " + e.getMessage());
             }
         });
 
 
         parser.registerCommand("audit-log", "Show audit log", (s, sys) -> {
-            System.out.println("\n=== AUDIT LOG ===");
+            ConsoleUtils.printHeader("AUDIT LOG");
 
-            System.out.println("Options:");
-            System.out.println("  1. Show all entries");
-            System.out.println("  2. Filter by performer");
-            System.out.println("  3. Filter by action");
-            System.out.println("  4. Save to file");
-            System.out.print("Choice (1-4): ");
+            List<String> options = List.of(
+                    "Show all entries",
+                    "Filter by performer",
+                    "Filter by action",
+                    "Save to file"
+            );
 
-            String choice = s.nextLine().trim();
+            String choice = ConsoleUtils.promptChoice(s, "Options:", options);
             AuditLog auditLog = sys.getAuditLog();
 
-            switch (choice) {
-                case "1":
-                    auditLog.printLog();
-                    break;
-                case "2":
-                    System.out.print("Enter performer username: ");
-                    String performer = s.nextLine().trim();
-                    var byPerformer = auditLog.getByPerformer(performer);
-                    if (byPerformer.isEmpty()) {
-                        System.out.println("No entries found for performer: " + performer);
-                    } else {
-                        System.out.println("\n=== AUDIT LOG (performer: " + performer + ") ===");
-                        for (var entry : byPerformer) {
-                            System.out.println(entry.format());
-                        }
-                        System.out.println("Total: " + byPerformer.size());
+            if (choice.equals("Show all entries")) {
+                auditLog.printLog();
+
+            } else if (choice.equals("Filter by performer")) {
+                String performer = ConsoleUtils.promptString(s, "Enter performer username: ", true);
+                var byPerformer = auditLog.getByPerformer(performer);
+                if (byPerformer.isEmpty()) {
+                    ConsoleUtils.printInfo("No entries found for performer: " + performer);
+                } else {
+                    ConsoleUtils.printSuccess("Audit log (performer: " + performer + ")");
+                    for (var entry : byPerformer) {
+                        System.out.println(entry.format());
                     }
-                    break;
-                case "3":
-                    System.out.print("Enter action: ");
-                    String action = s.nextLine().trim().toUpperCase();
-                    var byAction = auditLog.getByAction(action);
-                    if (byAction.isEmpty()) {
-                        System.out.println("No entries found for action: " + action);
-                    } else {
-                        System.out.println("\n=== AUDIT LOG (action: " + action + ") ===");
-                        for (var entry : byAction) {
-                            System.out.println(entry.format());
-                        }
-                        System.out.println("Total: " + byAction.size());
+                    ConsoleUtils.printSuccess("Total: " + byPerformer.size());
+                }
+
+            } else if (choice.equals("Filter by action")) {
+                String action = ConsoleUtils.promptString(s, "Enter action: ", true);
+                var byAction = auditLog.getByAction(action.toUpperCase());
+                if (byAction.isEmpty()) {
+                    ConsoleUtils.printInfo("No entries found for action: " + action);
+                } else {
+                    ConsoleUtils.printSuccess("Audit log (action: " + action + ")");
+                    for (var entry : byAction) {
+                        System.out.println(entry.format());
                     }
-                    break;
-                case "4":
-                    System.out.print("Enter filename: ");
-                    String filename = s.nextLine().trim();
-                    if (filename.isEmpty()) filename = "audit_log.txt";
-                    auditLog.saveToFile(filename);
-                    break;
-                default:
-                    System.out.println("Invalid choice");
+                    ConsoleUtils.printSuccess("Total: " + byAction.size());
+                }
+
+            } else {
+                String filename = ConsoleUtils.promptString(s, "Enter filename: ", false);
+                if (filename == null || filename.isEmpty()) {
+                    filename = "audit_log.txt";
+                }
+                auditLog.saveToFile(filename);
             }
         });
 
         parser.registerCommand("report-users", "Generate user report", (s, sys) -> {
-            System.out.println("\n=== GENERATE USER REPORT ===");
+            ConsoleUtils.printHeader("GENERATE USER REPORT");
 
             ReportGenerator generator = new ReportGenerator();
             String report = generator.generateUserReport(sys.getUserManager(), sys.getAssignmentManager());
 
-            System.out.print("Save to file? (y/n): ");
-            String answer = s.nextLine().trim().toLowerCase();
+            boolean saveToFile = ConsoleUtils.promptYesNo(s, "Save to file?");
 
-            if (answer.equals("y") || answer.equals("yes")) {
-                System.out.print("Enter filename (default: user_report.txt): ");
-                String filename = s.nextLine().trim();
-                if (filename.isEmpty()) {
+            if (saveToFile) {
+                String filename = ConsoleUtils.promptString(s, "Enter filename (default: user_report.txt): ", false);
+                if (filename == null || filename.isEmpty()) {
                     filename = "user_report.txt";
                 }
                 generator.exportToFile(report, filename);
@@ -1635,18 +1488,16 @@ public class CommandRegistry {
         });
 
         parser.registerCommand("report-roles", "Generate role report", (s, sys) -> {
-            System.out.println("\n=== GENERATE ROLE REPORT ===");
+            ConsoleUtils.printHeader("GENERATE ROLE REPORT");
 
             ReportGenerator generator = new ReportGenerator();
             String report = generator.generateRoleReport(sys.getRoleManager(), sys.getAssignmentManager());
 
-            System.out.print("Save to file? (y/n): ");
-            String answer = s.nextLine().trim().toLowerCase();
+            boolean saveToFile = ConsoleUtils.promptYesNo(s, "Save to file?");
 
-            if (answer.equals("y") || answer.equals("yes")) {
-                System.out.print("Enter filename (default: role_report.txt): ");
-                String filename = s.nextLine().trim();
-                if (filename.isEmpty()) {
+            if (saveToFile) {
+                String filename = ConsoleUtils.promptString(s, "Enter filename (default: role_report.txt): ", false);
+                if (filename == null || filename.isEmpty()) {
                     filename = "role_report.txt";
                 }
                 generator.exportToFile(report, filename);
@@ -1656,18 +1507,16 @@ public class CommandRegistry {
         });
 
         parser.registerCommand("report-matrix", "Generate permission matrix", (s, sys) -> {
-            System.out.println("\n=== GENERATE PERMISSION MATRIX ===");
+            ConsoleUtils.printHeader("GENERATE PERMISSION MATRIX");
 
             ReportGenerator generator = new ReportGenerator();
             String report = generator.generatePermissionMatrix(sys.getUserManager(), sys.getAssignmentManager());
 
-            System.out.print("Save to file? (y/n): ");
-            String answer = s.nextLine().trim().toLowerCase();
+            boolean saveToFile = ConsoleUtils.promptYesNo(s, "Save to file?");
 
-            if (answer.equals("y") || answer.equals("yes")) {
-                System.out.print("Enter filename (default: matrix_report.txt): ");
-                String filename = s.nextLine().trim();
-                if (filename.isEmpty()) {
+            if (saveToFile) {
+                String filename = ConsoleUtils.promptString(s, "Enter filename (default: matrix_report.txt): ", false);
+                if (filename == null || filename.isEmpty()) {
                     filename = "matrix_report.txt";
                 }
                 generator.exportToFile(report, filename);
